@@ -2,24 +2,39 @@ package com.uth.confms.config;
 
 import java.util.Arrays;
 import java.util.List;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+/**
+ * Cấu hình CORS (Cross-Origin Resource Sharing)
+ *
+ * <p>CORS origins được externalize qua biến môi trường để dễ dàng
+ * cấu hình cho các môi trường khác nhau (dev, staging, production).
+ *
+ * @author UTH-ConfMS Team
+ * @version 1.0
+ */
 @Configuration
 public class CorsConfig {
+
+  @Value("${app.cors.allowed-origins:http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000,http://127.0.0.1:5173}")
+  private String allowedOrigins;
 
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(
-        List.of(
-            "http://localhost:3000",
-            "http://localhost:5173",
-            "http://127.0.0.1:3000",
-            "http://127.0.0.1:5173"));
+    
+    // Parse allowed origins từ biến môi trường (comma-separated)
+    List<String> origins = Arrays.asList(allowedOrigins.split(","));
+    configuration.setAllowedOrigins(origins.stream()
+        .map(String::trim)
+        .filter(s -> !s.isEmpty())
+        .toList());
+    
     configuration.setAllowedMethods(
         Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
     configuration.setAllowedHeaders(List.of("*"));
